--- a/database/build.gradle
+++ b/database/build.gradle
@@ -1,14 +1,27 @@
-plugins {
-    id 'java-library'
+apply plugin: 'java-library'
+
+test {
+	doFirst {
+		def folder = new File("$projectDir/db")
+		if (folder.isDirectory()) {
+			File[] children = folder.listFiles();
+			for (File child : children) {
+				println "Hello World"
+				child.delete();
+			}
+		}
+	}
 }
 
 dependencies {
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
+	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
+	implementation group: 'org.apache.commons', name: 'commons-dbcp2', version: '2.6.0'
+	
+	implementation 'com.google.guava:guava:27.0.1-jre'
 
-    implementation 'com.google.guava:guava:27.0.1-jre' 
-
-    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.2'
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.2'
 	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.4.2'
+	testImplementation group: 'com.h2database', name: 'h2', version: '1.4.199'
 }
 
