--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,4 @@ include 'database'
 include 'users-service-sql-native'
 include 'users-service-jpa'
 include 'server'
-include 'restsql'
+//include 'restsql'
