--- a/users-service-jpa/build.gradle
+++ b/users-service-jpa/build.gradle
@@ -1,8 +1,3 @@
-//plugins {
-//	id 'java'
-//	id 'application'
-//}
-
 apply plugin: 'application'
 
 //application {
@@ -24,7 +19,7 @@ ext {
 
 dependencies {
 	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
-	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
+	implementation group: 'com.google.guava', name: 'guava', version: '27.1-jre'
 
 	implementation "org.eclipse.jetty:jetty-server:${jettyVersion}"
 	implementation "org.eclipse.jetty:jetty-servlet:${jettyVersion}"
@@ -40,11 +35,17 @@ dependencies {
 	implementation group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.4.0-b180830.0438'
 	implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
 
+	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
 	implementation group: 'org.eclipse.persistence', name: 'org.eclipse.persistence.jpa', version: '2.7.4'
 
-	// This dependency is used internally, and not exposed to consumers on their own compile classpath.
-	compile 'com.google.guava:guava:26.0-jre'
-	// Use JUnit test framework
-	testImplementation 'junit:junit:4.12'
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.2'
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.4.2'
+	testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.27.0'
+	testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '2.27.0'
+
+	testImplementation group: 'org.glassfish.jersey.test-framework', name: 'jersey-test-framework-core', version: '2.28'
+	testImplementation group: 'org.glassfish.jersey.test-framework.providers', name: 'jersey-test-framework-provider-grizzly2', version: '2.28'
+
 	testImplementation group: 'com.h2database', name: 'h2', version: '1.4.199'
+
 }
