--- a/authorization-service-spring/build.gradle
+++ b/authorization-service-spring/build.gradle
@@ -8,6 +8,7 @@ dependencies {
     implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.1.5.RELEASE'
     
     implementation 'org.projectlombok:lombok:1.18.6'
+    implementation 'org.apache.commons:commons-lang3:3.9'
     
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
     implementation 'javax.activation:activation:1.1'
