--- a/authorization-service-spring/src/main/resources/application.yml
+++ b/authorization-service-spring/src/main/resources/application.yml
@@ -2,10 +2,10 @@ server:
   port: 9191
 spring:
   datasource:
-    url: jdbc:mysql://192.168.111.20:3306/authDB?createDatabaseIfNotExist=true
-    username: erudisch
-    password: g9wfve6Jd4pVbNUs
-    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://172.18.0.3:3306/authDB?createDatabaseIfNotExist=true
+    username: root
+    password: test
+    driver-class-name: com.mysql.cj.jdbc.Driver
     initialization-mode: always
   jpa:
     hibernate:
