--- a/authorization-service-spring/src/main/resources/application.yml
+++ b/authorization-service-spring/src/main/resources/application.yml
@@ -15,6 +15,10 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
+security:
+  oauth2:
+    resource:
+      id: http://localhost:9191/admin
 logging:
   level:
     org:
