--- a/authorization-service-spring/build.gradle
+++ b/authorization-service-spring/build.gradle
@@ -17,4 +17,6 @@ dependencies {
     runtime 'mysql:mysql-connector-java:8.0.15'
     
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.1.3.RELEASE'
+    testImplementation 'org.springframework.security:spring-security-test:5.1.5.RELEASE'
+    testImplementation 'io.rest-assured:rest-assured:4.0.0'
 }
