--- a/authorization-service-spring/build.gradle
+++ b/authorization-service-spring/build.gradle
@@ -19,4 +19,6 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.1.3.RELEASE'
     testImplementation 'org.springframework.security:spring-security-test:5.1.5.RELEASE'
     testImplementation 'io.rest-assured:rest-assured:4.0.0'
+    testImplementation 'com.github.tomakehurst:wiremock:2.23.2'
+    
 }
