--- a/authorization-service-spring/build.gradle
+++ b/authorization-service-spring/build.gradle
@@ -1,3 +1,7 @@
+plugins {
+  id "io.freefair.lombok" version "3.7.5"
+}
+
 apply plugin: 'application'
 
 dependencies {
@@ -19,6 +23,6 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.1.3.RELEASE'
     testImplementation 'org.springframework.security:spring-security-test:5.1.5.RELEASE'
     testImplementation 'io.rest-assured:rest-assured:4.0.0'
-    testImplementation 'com.github.tomakehurst:wiremock:2.23.2'
+    testImplementation group: 'com.h2database', name: 'h2', version: '1.4.199'
     
 }
