--- a/authorization-service-spring/build.gradle
+++ b/authorization-service-spring/build.gradle
@@ -23,6 +23,6 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.1.3.RELEASE'
     testImplementation 'org.springframework.security:spring-security-test:5.1.5.RELEASE'
     testImplementation 'io.rest-assured:rest-assured:4.0.0'
-    testImplementation group: 'com.h2database', name: 'h2', version: '1.4.199'
+    testImplementation 'com.h2database:h2:1.4.199'
     
 }
