--- a/users-service-jpa/build.gradle
+++ b/users-service-jpa/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
 	implementation group: 'org.eclipse.persistence', name: 'org.eclipse.persistence.jpa', version: '2.7.4'
 
+	implementation group: 'com.auth0', name: 'java-jwt', version: '3.8.1'
+
 	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.2'
 	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.4.2'
 	testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.27.0'
