add missing main path to gradle files

--- a/users-service-jpa/build.gradle
+++ b/users-service-jpa/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'application'
 
-//application {
-//	mainClassName = 'de.rudisch.users.Main'
-//}
+application {
+	mainClassName = 'eu.rudisch.users.Main'
+}
 //
 //jar {
 //	manifest {
