--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,36 @@ plugins {
 	id 'com.github.spotbugs' version '2.0.0'
 }
 
+ext.springBootStarterDataJpaVersion = '2.1.6.RELEASE'
+ext.springBootStarterWebVersion = '2.1.6.RELEASE'
+ext.springCloudStarterOauth2Version = '2.1.3.RELEASE'
+ext.springCloudStarterSecurityVersion = '2.1.3.RELEASE'
+ext.springSecurityOauth2AutoconfigureVersion = '2.1.6.RELEASE'
+
+ext.jettyVersion = '9.4.19.v20190610'
+ext.jerseyVersion = '2.29'
+
+ext.javaJwtVersion = '3.8.1'
+ext.log4jCoreVersion = '2.12.0'
+ext.guavaVersion = '28.0-jre'
+ext.lombokVersion = '1.18.8'
+ext.commonsLang3Version = '3.9'
+
+ext.jaxbApiVersion = '2.3.1'
+ext.javaxActivationVersion = '1.1.1'
+ext.jaxbRuntimeVersion = '2.3.2'
+
+ext.mysqlConnectorJavaVersion = '8.0.16'
+ext.commonsDbcp2Version = '2.6.0'
+ext.eclipsePersistenceJpaVersion = '2.7.4'
+
+ext.springBootStarterTestVersion = '2.1.6.RELEASE'
+ext.springSecurityTestVersion = '5.1.5.RELEASE'
+ext.restAssuredVersion = '4.0.0'
+ext.h2Version = '1.4.199'
+ext.junit5Version = '5.5.0'
+ext.mockitoVersion = '3.0.0'
+
 configure(subprojects) {
 	apply plugin: 'java'
 	apply plugin: 'checkstyle'
