--- a/users-service-jpa/build.gradle
+++ b/users-service-jpa/build.gradle
@@ -18,36 +18,37 @@ ext {
 }
 
 dependencies {
-	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
-	implementation group: 'com.google.guava', name: 'guava', version: '27.1-jre'
+	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: project.log4jCoreVersion
+	implementation group: 'com.google.guava', name: 'guava', version: project.guavaVersion
 
-	implementation "org.eclipse.jetty:jetty-server:${jettyVersion}"
-	implementation "org.eclipse.jetty:jetty-servlet:${jettyVersion}"
+	implementation group: 'org.eclipse.jetty', name: 'jetty-server', version: project.jettyVersion
+	implementation group: 'org.eclipse.jetty', name: 'jetty-servlet', version: project.jettyVersion
 
-	implementation "org.glassfish.jersey.core:jersey-server:${jerseyVersion}"
-	implementation "org.glassfish.jersey.containers:jersey-container-servlet-core:${jerseyVersion}"
-	implementation "org.glassfish.jersey.containers:jersey-container-jetty-http:${jerseyVersion}"
-	implementation "org.glassfish.jersey.media:jersey-media-json-jackson:${jerseyVersion}"
-	implementation "org.glassfish.jersey.inject:jersey-hk2:${jerseyVersion}"
+	implementation group: 'org.glassfish.jersey.core', name: 'jersey-server', version: project.jerseyVersion
+	implementation group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet-core', version: project.jerseyVersion
+	implementation group: 'org.glassfish.jersey.containers', name: 'jersey-container-jetty-http', version: project.jerseyVersion
+	implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: project.jerseyVersion
+	implementation group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: project.jerseyVersion
 
-	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'
-	implementation group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0.1'
-	implementation group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.4.0-b180830.0438'
-	implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
+	// implementation group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0.1'
+	// implementation group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.4.0-b180830.0438'
+	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: project.jaxbApiVersion
+    implementation group: 'javax.activation', name: 'activation', version: project.javaxActivationVersion
+    implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: project.jaxbRuntimeVersion
 
-	implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.16'
-	implementation group: 'org.eclipse.persistence', name: 'org.eclipse.persistence.jpa', version: '2.7.4'
+	implementation group: 'mysql', name: 'mysql-connector-java', version: project.mysqlConnectorJavaVersion
+	implementation group: 'org.eclipse.persistence', name: 'org.eclipse.persistence.jpa', version: project.eclipsePersistenceJpaVersion
 
-	implementation group: 'com.auth0', name: 'java-jwt', version: '3.8.1'
+	implementation group: 'com.auth0', name: 'java-jwt', version: project.javaJwtVersion
 
-	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.4.2'
-	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.4.2'
-	testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.27.0'
-	testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '2.27.0'
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: project.junit5Version
+	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: project.junit5Version
+	testImplementation group: 'org.mockito', name: 'mockito-core', version: project.mockitoVersion
+	testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: project.mockitoVersion
 
-	testImplementation group: 'org.glassfish.jersey.test-framework', name: 'jersey-test-framework-core', version: '2.28'
-	testImplementation group: 'org.glassfish.jersey.test-framework.providers', name: 'jersey-test-framework-provider-grizzly2', version: '2.28'
+	testImplementation group: 'org.glassfish.jersey.test-framework', name: 'jersey-test-framework-core', version: project.jerseyVersion
+	testImplementation group: 'org.glassfish.jersey.test-framework.providers', name: 'jersey-test-framework-provider-grizzly2', version: project.jerseyVersion
 
-	testImplementation group: 'com.h2database', name: 'h2', version: '1.4.199'
+	testImplementation group: 'com.h2database', name: 'h2', version: project.h2Version
 
 }
