--- a/users-service-sql-native/build.gradle
+++ b/users-service-sql-native/build.gradle
@@ -17,33 +17,26 @@ application {
 //	}
 //}
 
-ext {
-	jettyVersion = '9.4.18.v20190429'
-	jerseyVersion = '2.28'
-}
-
 dependencies {
-	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
+	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: project.log4jCoreVersion
+	implementation group: 'com.google.guava', name: 'guava', version: project.guavaVersion
+	
+	implementation group: 'org.eclipse.jetty', name: 'jetty-server', version: project.jettyVersion
+	implementation group: 'org.eclipse.jetty', name: 'jetty-servlet', version: project.jettyVersion
 
-	implementation "org.eclipse.jetty:jetty-server:${jettyVersion}"
-	implementation "org.eclipse.jetty:jetty-servlet:${jettyVersion}"
+	implementation group: 'org.glassfish.jersey.core', name: 'jersey-server', version: project.jerseyVersion
+	implementation group: 'org.glassfish.jersey.containers', name: 'jersey-container-servlet-core', version: project.jerseyVersion
+	implementation group: 'org.glassfish.jersey.containers', name: 'jersey-container-jetty-http', version: project.jerseyVersion
+	implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: project.jerseyVersion
+	implementation group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: project.jerseyVersion
 
-	implementation "org.glassfish.jersey.core:jersey-server:${jerseyVersion}"
-	implementation "org.glassfish.jersey.containers:jersey-container-servlet-core:${jerseyVersion}"
-	implementation "org.glassfish.jersey.containers:jersey-container-jetty-http:${jerseyVersion}"
-	implementation "org.glassfish.jersey.media:jersey-media-json-jackson:${jerseyVersion}"
-	implementation "org.glassfish.jersey.inject:jersey-hk2:${jerseyVersion}"
-
-	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'
-	implementation group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0.1'
-	implementation group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.4.0-b180830.0438'
-	implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
+	// implementation group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0.1'
+	// implementation group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.4.0-b180830.0438'
+	implementation group: 'javax.xml.bind', name: 'jaxb-api', version: project.jaxbApiVersion
+    implementation group: 'javax.activation', name: 'activation', version: project.javaxActivationVersion
+    implementation group: 'org.glassfish.jaxb', name: 'jaxb-runtime', version: project.jaxbRuntimeVersion
 
 	implementation project(':database')
 
-	// This dependency is used internally, and not exposed to consumers on their own compile classpath.
-	compile 'com.google.guava:guava:26.0-jre'
-	// Use JUnit test framework
-	testImplementation 'junit:junit:4.12'
-	testImplementation group: 'com.h2database', name: 'h2', version: '1.4.199'
+	testImplementation group: 'com.h2database', name: 'h2', version: project.h2Version
 }
