--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+addons:
+  apt:
+    packages:
+      - lynx
 language: java
 jdk: openjdk11
 cache:
@@ -12,5 +16,7 @@ script:
   - "../gradlew test"
   - "cd ../authorization-admin-service-spring"
   - "../gradlew test"
+after_failure:
+  - if [ -f /home/travis/build/e-ru/jvm/authorization-service-spring/build/reports/tests/test/index.html ]; then lynx -dump /home/travis/build/e-ru/jvm/authorization-service-spring/build/reports/tests/test/index.html; fi
 on:
   branch: master
