--- a/authorization-admin-service-spring/build.gradle
+++ b/authorization-admin-service-spring/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-oauth2', version: project.springCloudStarterOauth2Version
     
     implementation group: 'org.projectlombok', name: 'lombok', version: project.lombokVersion
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: project.commonsLang3Version
+    implementation group: 'org.apache.commons', name: 'commons-text', version: project.commonsTextVersion
     
     implementation group: 'javax.xml.bind', name: 'jaxb-api', version: project.jaxbApiVersion
     implementation group: 'javax.activation', name: 'activation', version: project.javaxActivationVersion
