--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ ext.log4jCoreVersion = '2.12.0'
 ext.guavaVersion = '28.0-jre'
 ext.lombokVersion = '1.18.8'
 ext.commonsLang3Version = '3.9'
+ext.commonsTextVersion = '1.7'
 
 ext.jaxbApiVersion = '2.3.1'
 ext.javaxActivationVersion = '1.1.1'
