update test settings

--- a/authorization-service-spring/src/test/resources/custom.yml
+++ b/authorization-service-spring/src/test/resources/custom.yml
@@ -1,5 +1,5 @@
 custom:
-  reuseRefreshToken: true
+  reuseRefreshToken: false
   keyStorePath: mytest.jks
   keyStoreAlias: mytest
   keyStorePassword: mypass
