add admin kotlin

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,4 +15,4 @@ include 'users-service-jpa'
 include 'server'
 include 'authorization-service-spring'
 include 'authorization-admin-service-spring'
-//include 'restsql'
+include 'authorization-admin-service-spring-kotlin'
