--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ import org.eclipse.jface.text.IDocument;
 import org.eclipse.text.edits.TextEdit;
 
 buildscript {
+    ext {
+        kotlinVersion = "1.3.41"
+    }
 	repositories {
 		jcenter()
 		maven {
@@ -12,8 +15,13 @@ buildscript {
 	}
 	dependencies {
 		classpath 'org.eclipse.jdt:org.eclipse.jdt.core:3.12.2'
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-noarg:${kotlinVersion}")
 	}
 }
+
+
 
 plugins {
 	id 'com.github.spotbugs' version '2.0.0'
@@ -50,7 +58,7 @@ ext.h2Version = '1.4.199'
 ext.junit5Version = '5.5.0'
 ext.mockitoVersion = '3.0.0'
 
-ext.kotlinVersion = "1.3.41"
+// ext.kotlinVersion = "1.3.41"
 
 configure(subprojects) {
 	apply plugin: 'java'
@@ -58,6 +66,8 @@ configure(subprojects) {
 	apply plugin: 'eclipse'
 	apply plugin: 'idea'
 	apply plugin: 'com.github.spotbugs'
+    apply plugin: 'kotlin'
+    apply plugin: 'kotlin-kapt'
 
 	checkstyle {
 		toolVersion '8.20'
