--- a/authorization-admin-service-spring-kotlin/build.gradle
+++ b/authorization-admin-service-spring-kotlin/build.gradle
@@ -10,8 +10,8 @@ buildscript {
     }
 }
 
-//apply plugin: 'kotlin'
-//apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin'
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-spring'
 apply plugin: 'kotlin-jpa'
 apply plugin: 'kotlin-allopen'
