--- a/math/build.gradle
+++ b/math/build.gradle
@@ -1,22 +1,22 @@
-//buildscript {
-//    ext {
-//        kotlinVersion = rootProject.kotlinVersion
-//    }
-//    repositories {
-//        mavenCentral()
-//    }
-//    dependencies {
-//        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
-//        classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
-//        classpath("org.jetbrains.kotlin:kotlin-noarg:${kotlinVersion}")
-//    }
-//}
+buildscript {
+    ext {
+        kotlinVersion = rootProject.kotlinVersion
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-noarg:${kotlinVersion}")
+    }
+}
 
-//apply plugin: 'kotlin'
-//apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin'
+apply plugin: 'kotlin-kapt'
 
-// group = 'eu.rudisch'
-// version = '0.0.1-SNAPSHOT'
+ group = 'eu.rudisch'
+ version = '0.0.1-SNAPSHOT'
 
 compileKotlin {
     kotlinOptions {
