--- a/settings.gradle
+++ b/settings.gradle
@@ -17,4 +17,4 @@ include "authorization-service-spring"
 include "authorization-admin-service-spring"
 include "authorization-admin-service-spring-kotlin"
 include "math"
-include "long-polling"
+include "server-sent-events"
